# huidu-sdk-gitee-mirror

./: BENIOKU.md  README.en.md  README.md
c/: CMakeLists.txt
c/demos/demo0_based/: CMakeLists.txt  main.c
c/demos/demo1_deviceInfo/: CMakeLists.txt  main.c
c/demos/demo2_task/: CMakeLists.txt  main.c
c/demos/demo3_baseProgram/: CMakeLists.txt  main.c
c/demos/demo4_multiProgram/: CMakeLists.txt  main.c
c/demos/demo5_dynamicContent/: CMakeLists.txt  main.c
c/demos/demo6_multiArea/: CMakeLists.txt  main.c
c/sdk/: CMakeLists.txt  Device.c  Device.h  File.c  File.h  Program.c  Program.h
c/sdk/common/: BaseClient.c  BaseClient.h  Config.c  Config.h  HttpApi.c  HttpApi.h
c/sdk/config/: application.json
c/sdk/data/: ProgramNode.c  ProgramNode.h
c/sdk/data/area/: AreaNode.c  AreaNode.h  ContentNode.c  ContentNode.h  DialClockNode.c  DialClockNode.h  DigitalClockNode.c  DigitalClockNode.h  DynamicNode.c  DynamicNode.h  ImageNode.c  ImageNode.h  TextNode.c  TextNode.h  VideoNode.c  VideoNode.h
c/sdk/data/other/: Border.c  Border.h  ClockParam.c  ClockParam.h  Effect.c  Effect.h  FileInfo.c  FileInfo.h  Font.c  Font.h  PlayControl.c  PlayControl.h
c/sdk/data/task/: PeriodicTaskInfo.c  PeriodicTaskInfo.h  ScheduledTaskInfo.c  ScheduledTaskInfo.h
c/sdk/deviceTask/: PeriodicTask.c  PeriodicTask.h  PushStatusTask.c  PushStatusTask.h  ScheduledTask.c  ScheduledTask.h
c/sdk/portfiles/: posixPortHmacmd5.c  posixPortHmacmd5.h  posixPortHttp.c  posixPortHttp.h  posixPortMemory.c  posixPortMemory.h
doc/: HD_HttpApi1.0_Apipost_Collection.json  HD_HttpApi1.0_Postman_Collection.json  SDK XML帮助文档.docx  http Api项目.json
docs-tr/: 01-sdk-kayit-ve-baslangic.md  02-sdk-test-ve-cihaz-baglantisi.md
java/: pom.xml
java/demo/: pom.xml
java/demo/src/main/java/cn/huidu/device/demo/demo0_based/: Main.java
java/demo/src/main/java/cn/huidu/device/demo/demo1_deviceInfod/: GetDeviceInfo.java  ModifyDevice.java  RebootDevice.java
java/demo/src/main/java/cn/huidu/device/demo/demo2_task/: PushTask.java  Scheduled.java
java/demo/src/main/java/cn/huidu/device/demo/demo3_baseProgram/: Main.java  dialClock.java  digitalClock.java  image.java  text.java  video.java
java/demo/src/main/java/cn/huidu/device/demo/demo4_multiProgram/: Main.java
java/demo/src/main/java/cn/huidu/device/demo/demo5_dynamicContent/: Main.java  PushTask.java
java/demo/src/main/java/cn/huidu/device/demo/demo6_multiAreaProgramSwitch/: Main.java  PushTask.java
java/sdk/: pom.xml
java/sdk/src/main/java/cn/huidu/device/sdk/: Device.java  File.java  Program.java
java/sdk/src/main/java/cn/huidu/device/sdk/common/: BaseClient.java  Config.java  HttpApi.java
java/sdk/src/main/java/cn/huidu/device/sdk/data/program/: ProgramNode.java
java/sdk/src/main/java/cn/huidu/device/sdk/data/program/area/: AreaNode.java
java/sdk/src/main/java/cn/huidu/device/sdk/data/program/other/: Border.java  ClockParam.java  Effect.java  FileInfo.java  Font.java  PlayControl.java
java/sdk/src/main/java/cn/huidu/device/sdk/data/task/: PeriodicTaskInfo.java  ScheduledTaskInfo.java
java/sdk/src/main/java/cn/huidu/device/sdk/deviceTask/: PeriodicTask.java  PushStatusTask.java  ScheduledTask.java
java/src/main/java/cn/huidu/device/api/demo/demo0_based/: Main.java
java/src/main/java/cn/huidu/device/api/demo/demo1_deviceInfod/: GetDeviceInfo.java  ModifyDevice.java  RebootDevice.java
java/src/main/java/cn/huidu/device/api/demo/demo2_task/: PushTask.java
java/src/main/java/cn/huidu/device/api/demo/demo3_baseProgram/: Main.java  text.java
java/src/main/java/cn/huidu/device/api/demo/demo4_multiProgram/: Main.java
java/src/main/java/cn/huidu/device/api/demo/demo5_dynamicContent/: PushTask.java
java/src/main/java/cn/huidu/device/api/demo/demo6_multiAreaProgramSwitch/: PushTask.java
java/src/main/java/cn/huidu/device/api/sdk/: Device.java
java/src/main/java/cn/huidu/device/api/sdk/common/: HttpApi.java
java/src/main/java/cn/huidu/device/api/sdk/data/program/: ProgramNode.java
java/src/main/java/cn/huidu/device/api/sdk/data/program/area/: AreaNode.java
java/src/main/java/cn/huidu/device/api/sdk/data/task/: PeriodicTaskInfo.java  ScheduledTaskInfo.java
java/src/main/java/cn/huidu/device/api/sdk/deviceTask/: PeriodicTask.java  PushStatusTask.java
java/src/main/resources/: application.properties
python/demos/demo0_based/: Main.py
python/demos/demo1_deviceInfo/: GetDeviceInfo.py  ModifyDevice.py  RebootDevice.py
python/demos/demo2_task/: Scheduled.py
python/demos/demo3_baseProgram/: dialClock.py  digitalClock.py  image.py  text.py  video.py
python/demos/demo4_multiAreaProgram/: Main.py
python/demos/demo5_dynamicContent/: PushTask.py
python/sdk/: Device.py  File.py  Program.py
python/sdk/common/: BaseClient.py  Config.py  HttpApi.py
python/sdk/data/: ProgramNode.py
python/sdk/data/area/: AreaNode.py  ContentNode.py  DialClockNode.py  DigitalClockNode.py  DynamicNode.py  ImageNode.py  TextNode.py  VideoNode.py
python/sdk/data/other/: Border.py  ClockParam.py  Effect.py  FileInfo.py  Font.py  PlayControl.py
python/sdk/data/task/: PeriodicTaskInfo.py  ScheduledTaskInfo.py
python/sdk/deviceTask/: PeriodicTask.py  PushStatusTask.py  ScheduledTask.py
src/main/java/cn/huidu/device/api/demo/demo2_task/: Scheduled.java
src/main/java/cn/huidu/device/api/demo/demo3_baseProgram/: dialClock.java  digitalClock.java  image.java  video.java
src/main/java/cn/huidu/device/api/demo/demo5_dynamicContent/: Main.java
src/main/java/cn/huidu/device/api/demo/demo6_multiAreaProgramSwitch/: Main.java
src/main/java/cn/huidu/device/api/sdk/: File.java  Program.java
src/main/java/cn/huidu/device/api/sdk/common/: BaseClient.java  Config.java  HttpApi.java
src/main/java/cn/huidu/device/api/sdk/data/program/other/: Border.java  ClockParam.java  FileInfo.java  Font.java  PlayControl.java
src/main/java/cn/huidu/device/api/sdk/data/task/: ScheduledTaskInfo.java
src/main/java/cn/huidu/device/api/sdk/deviceTask/: ScheduledTask.java
tools/: SDK_Test操作说明.docx
(+19 files in other folders)
